# TEC2

./: .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  main.cpp
